[gd_scene load_steps=7 format=3 uid="uid://bcl7rinykxawp"]

[ext_resource type="PackedScene" uid="uid://e41uscdwo833" path="res://Painel - global/painel.tscn" id="1_v4aqc"]
[ext_resource type="Script" path="res://jornal/scripts/painel_jornal.gd" id="2_c1r54"]
[ext_resource type="Texture2D" uid="uid://b6c8e5ccwjbvb" path="res://assets/buttons/Rectangle 13.png" id="3_0fwcq"]
[ext_resource type="FontFile" uid="uid://x68u5rsd0n4f" path="res://assets/fonts/Bungee-Regular.ttf" id="4_tul35"]
[ext_resource type="Texture2D" uid="uid://thhkd2iyw3pa" path="res://assets/icons/twemoji_coin.png" id="5_70mak"]
[ext_resource type="Texture2D" uid="uid://cuiophxp68y0d" path="res://assets/icons/512.png" id="6_ew8r5"]

[node name="painel_jornal" instance=ExtResource("1_v4aqc")]
script = ExtResource("2_c1r54")

[node name="Rectangle13" type="Sprite2D" parent="." index="2"]
position = Vector2(412, 152)
texture = ExtResource("3_0fwcq")

[node name="Line2D" type="Line2D" parent="." index="3"]
points = PackedVector2Array(570, 215, 570, 520)
width = 6.0
default_color = Color(0, 0, 0, 1)

[node name="Sorte-Story" type="Label" parent="." index="4"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -457.0
offset_top = 216.0
offset_right = -9.0
offset_bottom = -269.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tul35")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
autowrap_mode = 3

[node name="City-consequence-sorte" type="Label" parent="." index="5"]
layout_mode = 0
offset_left = 135.0
offset_top = 374.0
offset_right = 567.0
offset_bottom = 422.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tul35")
theme_override_font_sizes/font_size = 15
autowrap_mode = 3

[node name="Terra-Story" type="Label" parent="." index="6"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = 216.0
offset_right = 448.0
offset_bottom = -269.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tul35")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
autowrap_mode = 3

[node name="City-consequence-terra" type="Label" parent="." index="7"]
layout_mode = 0
offset_left = 583.0
offset_top = 374.0
offset_right = 1015.0
offset_bottom = 422.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tul35")
theme_override_font_sizes/font_size = 15
autowrap_mode = 3

[node name="tempIncrease-Sorte" type="Label" parent="." index="8"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -368.0
offset_top = 489.0
offset_right = -257.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tul35")
theme_override_font_sizes/font_size = 25
autowrap_mode = 3

[node name="coins-Sorte" type="Label" parent="." index="9"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -131.0
offset_top = 489.0
offset_right = -17.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tul35")
theme_override_font_sizes/font_size = 25
autowrap_mode = 3

[node name="tempIncrease-Terra" type="Label" parent="." index="10"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 70.0
offset_top = 489.0
offset_right = 207.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tul35")
theme_override_font_sizes/font_size = 25
autowrap_mode = 3

[node name="coins-Terra" type="Label" parent="." index="11"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 354.0
offset_top = 489.0
offset_right = 455.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tul35")
theme_override_font_sizes/font_size = 25
autowrap_mode = 3

[node name="TwemojiCoin-sorte" type="Sprite2D" parent="." index="12"]
position = Vector2(412, 502)
scale = Vector2(0.17, 0.17)
texture = ExtResource("5_70mak")

[node name="TwemojiCoin2-terra" type="Sprite2D" parent="." index="13"]
position = Vector2(898, 502)
scale = Vector2(0.17, 0.17)
texture = ExtResource("5_70mak")

[node name="temperature-icon-sorte" type="Sprite2D" parent="." index="14"]
position = Vector2(191, 498)
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_ew8r5")

[node name="temperature-icon-terra" type="Sprite2D" parent="." index="15"]
position = Vector2(626, 498)
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_ew8r5")
